Update JVM arguments in Gradle build script to allow sun.misc.unsafe memory access